# Projects

./: .gitignore  Makefile  PROJECT_EXPLANATION.md  README.md  SYSTEM_STATUS_DASHBOARD.md  TASK_STATUS_REPORT.md  TESTING_STRATEGY.md  TEST_EXECUTION_REPORT.md  Water Usage Tracker  WaterUsageTracker.java  demo.py  demo_forecast.py  demo_professional.py  project_audit.md  pyproject.toml  pytest.ini  quota_state.json  requirements.txt  setup.py  task_summary.md  test_quota_alert.py  test_results_summary.txt  trips.trips.xml
.github/workflows/: ci.yml  test.yml
adaptive_traffic/: PROJECT_EXPLANATION.md  README.txt  requirements.txt
adaptive_traffic/configs/: grid.net.xml  grid.sumocfg  intersection.json  sumo.net.xml  sumo.rou.xml  sumo.sumocfg
adaptive_traffic/src/: __init__.py
adaptive_traffic/src/env/: marl_env.py  sumo_env.py  traffic_env.py  video_env.py
adaptive_traffic/src/forecast/: traffic_forecast.py
adaptive_traffic/src/rl/: __init__.py  analyze_dqn.py  compare_strategies.py  inference.py  train_dqn.py  visualize_sim.py
adaptive_traffic/src/vision/: __init__.py  config.py  logging_config.py  performance.py  video_pipeline.py  yolo_queue.py
configs/: evening_rush.json  grid.rou.xml  morning_rush.json  sumo.edg.xml  sumo.netccfg  sumo.nod.xml
docs/testing/: strategy.md
reports/: PROFESSIONAL_PROJECT_REPORT.md
scripts/: generate_ci_summary.py  generate_system_report.py  setup_logging.py  setup_ml_stack.py  setup_observability.py  setup_prerequisites.py  setup_sumo.py  setup_utilities.py  setup_venv.py
src/: config.py  logging_config.py
src/control/: fuzzy_control.py  webster_method.py
src/env/: __init__.py  marl_env.py  sumo_env.py  traffic_env.py  video_env.py
src/forecast/: gnn_forecast.py  traffic_forecast.py
src/monitoring/: __init__.py  request_tracker.py
src/optimization/: genetic_algo.py  pso.py
src/rl/: analyze_dqn_simple.py  benchmark_dqn.py  benchmark_methods.py  comparison_simulation.py  dqn_agent.py  inference.py  inference_viz.py  live_simulation.py  train_dqn.py  train_video_dqn.py  visualize_sim.py
src/utils/: __init__.py  api.py  config.py  errors.py  health.py  io.py  metrics.py  quota.py
src/vision/: performance.py  roi_helper.py  video_pipeline.py  yolo_queue.py
test_fuzzy/: fuzzy_rewards.npy
test_ga/: ga_rewards.npy
test_gnn/: gnn_rewards.npy
test_optuna/: rewards.npy
test_optuna/tensorboard_logs/DQN_1/: events.out.tfevents.1756864837.Kunj.14656.3
test_pso/: pso_rewards.npy
test_reward_fix/: rewards.npy
test_reward_fix/tensorboard_logs/DQN_1/: events.out.tfevents.1756863879.Kunj.13288.0
test_webster/: webster_rewards.npy
tests/: test_marl_env.py  test_traffic_env.py  test_traffic_forecast.py
tests/integration/: test_traffic_fuzzy_integration.py
tests/performance/: test_performance_benchmarks.py
tests/system/: test_live_simulation.py
tests/unit/control/: test_fuzzy_control.py
tests/unit/rl/: test_dqn_agent.py
